2014-11-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (ALGO_RSA4K, ALGO_NISTP256R1, ALGO_SECP256K1)
	(ALGO_ED25519, ALGO_RSA2K): New.
	(struct key_data_internal): Move to ...
	* src/openpgp-do.c (struct key_data_internal): ... here.
	(CHECKSUM_ADDR, kdi_len): New.
	(CKDC_CALC, CKDC_CHECK): New.
	(compute_key_data_checksum): Add arg PRVKEY_LEN.
	(gpg_do_load_prvkey, gpg_do_delete_prvkey): Support modifiable key
	algo attributes.
	(gpg_do_write_prvkey, gpg_do_public_key, gpg_do_keygen): Likewise.
	(gpg_do_clear_prvkey): Use MAX_PRVKEY_LEN.

	* src/openpgp.c (gpg_init): Call flash_init_keys after
	gpg_data_scan.
	(cmd_pso): Support modifiable key algo attributes.
	(cmd_internal_authenticate): Likewise.

2014-11-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (algorithm_attr_rsa2k): Rename from *_rsa.
	(algorithm_attr_rsa4k): New.
	(get_algo_attr_pointer, kk_to_nr, gpg_get_algo_attr)
	(get_algo_attr_data_object, gpg_get_algo_attr_key_size): New.
	(rw_algorithm_attr): New.
	(gpg_do_table): Register rw_algorithm_attr for GPG_DO_ALG_*.
	(gpg_data_scan, gpg_data_copy): Handle algo attributes.

	(rw_pw_status): Fix checking against redundant write.

2014-11-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (extended_capabilities): Key attributes can be
	modifid now.

2014-11-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (NR_NONE, NR_DO__FIRST__): Remove.
	(NR_DO_*): Redefine.
	(NR_KEY_ALGO_ATTR_SIG, NR_KEY_ALGO_ATTR_DEC)
	(NR_KEY_ALGO_ATTR_AUT): New.

	* src/openpgp-do.c (gpg_do_load_prvkey, gpg_do_delete_prvkey)
	(gpg_do_write_prvkey, gpg_do_chks_prvkey, gpg_data_scan)
	(gpg_data_copy, gpg_do_read_simple)
	(gpg_do_write_simple): Don't use NR_DO__FIRST__.
	(gpg_do_put_data): Don't use NR_NONE any more.
	(do_tag_to_nr): Use -1 to specify NONE.

	* src/flash.c (flash_enum_clear, flash_enum_write_internal)
	(flash_enum_write): New.

2014-11-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (FIRMWARE_UPDATE_KEY_CONTENT_LEN): New.