@@ -1,3 +1,11 @@
+2014-12-01  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/Makefile.in (DEFS): Don't define compile time preference of
+	key algo attributes.
+
+	* src/openpgp-do.c (proc_key_import): Support modifiable key algo
+	attributes.
+
 2014-11-21  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/gnuk.h (ALGO_RSA4K, ALGO_NISTP256R1, ALGO_SECP256K1)
